--- a/index.html
+++ b/index.html
@@ -47,6 +47,56 @@
             <img src="./Personal Brand Carousel Tips Instagram Post.png" alt="">
         </div>
     </section>
+    <!-- About section -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="./Personal Brand Carousel Tips Instagram Post.png" alt="">
+        </div>
+
+         <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Software Engineer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis architecto harum neque autem illo nostrum. Libero repudiandae nemo enim blanditiis. Laudantium sunt pariatur repellendus id quidem laboriosam nemo dicta dolor rerum natus rem doloribus dignissimos, officiis, tempore praesentium eligendi, laborum beatae nostrum illo molestiae mollitia veniam?</p>
+            <a href="#" class="btn">Read More</a>
+         </div>
+    </section>
+
+    <!-- Service section design -->
+    <section class="services" id="services">
+        <h2 class="heading">Our <span>Services</span></h2>
+        
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                     Reiciendis quaerat, rerum pariatur ut placeat eos!</p>
+                     <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+
+         
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bxs-edit-alt'></i>
+                <h3>Copywriting</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                     Reiciendis quaerat, rerum pariatur ut placeat eos!</p>
+                     <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bxs-file-doc'></i>
+                <h3>Technical Writing</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                     Reiciendis quaerat, rerum pariatur ut placeat eos!</p>
+                     <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+
+    </section>
  <script src="./app.js"></script>   
 </body>
 </html>
