--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#sevices">Services</a>
+            <a href="#services">Services</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a> 
         </nav>
@@ -69,14 +69,9 @@
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                     Reiciendis quaerat, rerum pariatur ut placeat eos!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate quas iure adipisicing elit. Voluptate quas iure </p>
                      <a href="#" class="btn">Read More</a>
             </div>
-        </div>
-
-         
-        <div class="services-container">
             <div class="services-box">
                 <i class='bx bxs-edit-alt'></i>
                 <h3>Copywriting</h3>
@@ -84,9 +79,6 @@
                      Reiciendis quaerat, rerum pariatur ut placeat eos!</p>
                      <a href="#" class="btn">Read More</a>
             </div>
-        </div>
-
-        <div class="services-container">
             <div class="services-box">
                 <i class='bx bxs-file-doc'></i>
                 <h3>Technical Writing</h3>
@@ -95,7 +87,64 @@
                      <a href="#" class="btn">Read More</a>
             </div>
         </div>
+    </section>
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Latest <span>Project</span></h2>
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="https://i.pinimg.com/236x/44/9d/ad/449dada7a0411061e603af33af18f05d.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, pariatur.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
 
+            <div class="portfolio-box">
+                <img src="https://i.pinimg.com/236x/ff/36/fd/ff36fdc4bcbb8cb7b4f64e3d84c2911c.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, pariatur.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="https://i.pinimg.com/236x/44/9d/ad/449dada7a0411061e603af33af18f05d.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, pariatur.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="https://i.pinimg.com/236x/44/9d/ad/449dada7a0411061e603af33af18f05d.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, pariatur.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="https://i.pinimg.com/236x/ff/36/fd/ff36fdc4bcbb8cb7b4f64e3d84c2911c.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, pariatur.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="https://i.pinimg.com/236x/44/9d/ad/449dada7a0411061e603af33af18f05d.jpg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, pariatur.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+        </div>
     </section>
  <script src="./app.js"></script>   
 </body>
