finishing up UI

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="home-content">
             <h3>Hello, it's Me</h3>
             <h1>Ginikachukwu  Nwibe</h1>
-            <h3>And I'm a <span>Software Engineer</span></h3>
+            <h3>And I'm a <span class="multiple-text-animation"></span></h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                 Tempore inventore sint repellendus, 
                 voluptates adipisci consectetur?</p>
@@ -175,6 +175,14 @@
             <a href="#home"><i class='bx bx-up-arrow-circle'></i></a>
         </div>
     </footer>
+
+    <!-- scroll reveal -->
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- typed js -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <!-- custom js -->
  <script src="./app.js"></script>   
 </body>
 </html>
